# mujoco_evolve

./: .gitignore  CMakeLists.txt  Doxyfile
.github/workflows/: ci.yml
agent_notes/: planning.md  research.md  research_mujoco.md
docs/: Makefile  conf.py  doc_infrastructure.rst  getting_started.rst  index.rst  mujoco_fundamentals.rst  visualization.rst
docs/api/: index.rst
include/brain/: neural_controller.h
include/ga/: genetic_algorithm.h
include/morphology/: body_gene.h  mjcf_writer.h
include/sim/: sim_utils.h
include/utils/: thread_pool.h
models/: test_capsule.xml
src/: main.cpp
src/brain/: neural_controller.cpp
src/ga/: genetic_algorithm.cpp
src/morphology/: body_gene.cpp  mjcf_writer.cpp
src/sim/: sim_utils.cpp
src/utils/: thread_pool.cpp
tests/: test_mujoco.cpp  test_rendering.cpp
